Fixed The Skills Card Width On Mobile

--- a/styles.css
+++ b/styles.css
@@ -187,7 +187,7 @@ body {
 
 #skills {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(144px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(132px, 1fr));
   gap: 32px;
 }
 
